Agregue editor de codigo

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animejs": "^3.1.0",
     "automata.js": "^0.2.1",
     "bootstrap": "^4.4.1",
+    "codemirror": "^5.51.0",
     "dompurify": "^2.0.8",
     "events": "^3.1.0",
     "gojs": "^2.1.8",
@@ -16,6 +17,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-codemirror2": "^6.0.0",
     "react-dom": "^16.12.0",
     "react-html-parser": "^2.0.2",
     "react-scripts": "3.3.1",
